--- a/MonsterChaseGame/MonsterChaseGame.vcxproj
+++ b/MonsterChaseGame/MonsterChaseGame.vcxproj
@@ -151,27 +151,27 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClInclude Include="GameManager.h" />
-    <ClInclude Include="GameObject.h" />
-    <ClInclude Include="GameObjectType.h" />
-    <ClInclude Include="InputManager.h" />
-    <ClInclude Include="Monster.h" />
+    <ClInclude Include="include\Managers\GameManager.h" />
+    <ClInclude Include="include\GameObjects\GameObject.h" />
+    <ClInclude Include="include\GameObjects\GameObjectType.h" />
+    <ClInclude Include="include\Managers\InputManager.h" />
+    <ClInclude Include="include\GameObjects\Classes\Monster.h" />
     <ClInclude Include="pch.h" />
-    <ClInclude Include="Player.h" />
+    <ClInclude Include="include\GameObjects\Classes\Player.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="GameManager.cpp" />
-    <ClCompile Include="GameObject.cpp" />
-    <ClCompile Include="GameObjectType.cpp" />
-    <ClCompile Include="Monster.cpp" />
-    <ClCompile Include="MonsterChaseGame.cpp" />
+    <ClCompile Include="src\Managers\GameManager.cpp" />
+    <ClCompile Include="src\GameObjects\GameObject.cpp" />
+    <ClCompile Include="src\GameObjects\GameObjectType.cpp" />
+    <ClCompile Include="src\GameObjects\Classes\Monster.cpp" />
+    <ClCompile Include="src\MonsterChaseGame.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
-    <ClCompile Include="Player.cpp" />
+    <ClCompile Include="src\GameObjects\Classes\Player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
