--- a/MonsterChaseGame/MonsterChaseGame.vcxproj
+++ b/MonsterChaseGame/MonsterChaseGame.vcxproj
@@ -104,7 +104,7 @@
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <ClCompile>
-      <PrecompiledHeader>Use</PrecompiledHeader>
+      <PrecompiledHeader>NotUsing</PrecompiledHeader>
       <WarningLevel>Level3</WarningLevel>
       <Optimization>Disabled</Optimization>
       <SDLCheck>true</SDLCheck>
@@ -162,7 +162,6 @@
     <ClInclude Include="include\GameObjects\GameObjectType.h" />
     <ClInclude Include="include\Managers\InputManager.h" />
     <ClInclude Include="include\GameObjects\Classes\Monster.h" />
-    <ClInclude Include="include\pch.h" />
     <ClInclude Include="include\GameObjects\Classes\Player.h" />
   </ItemGroup>
   <ItemGroup>
@@ -171,12 +170,6 @@
     <ClCompile Include="src\GameObjects\GameObjectType.cpp" />
     <ClCompile Include="src\GameObjects\Classes\Monster.cpp" />
     <ClCompile Include="src\MonsterChaseGame.cpp" />
-    <ClCompile Include="src\pch.cpp">
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
-      <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
-    </ClCompile>
     <ClCompile Include="src\GameObjects\Classes\Player.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
