--- a/MonsterChaseGame/MonsterChaseGame.vcxproj
+++ b/MonsterChaseGame/MonsterChaseGame.vcxproj
@@ -177,10 +177,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="include\MonsterChaseGame.h" />
     <ClInclude Include="include\Managers\GameManager.h" />
     <ClInclude Include="include\GameObjects\GameObject.h" />
     <ClInclude Include="include\GameObjects\GameObjectType.h" />
-    <ClInclude Include="include\Managers\InputManager.h" />
     <ClInclude Include="include\GameObjects\Classes\Monster.h" />
     <ClInclude Include="include\GameObjects\Classes\Player.h" />
   </ItemGroup>
