--- a/KPEngine/KPEngine.vcxproj.filters
+++ b/KPEngine/KPEngine.vcxproj.filters
@@ -27,6 +27,12 @@
     <ClCompile Include="src\Utils\KP_Log.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\Core\HeapManager\KPHeapManager.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Core\HeapManager\HeapManagerProxy.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="include\Utils\List.h">
@@ -45,6 +51,12 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="include\Utils\KPLogType.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Core\HeapManager\KPHeapManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Core\HeapManager\HeapManagerProxy.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
