--- a/KPEngine_Test/KPEngine_Test.vcxproj
+++ b/KPEngine_Test/KPEngine_Test.vcxproj
@@ -180,6 +180,7 @@
   <ItemGroup>
     <ClCompile Include="HeapManager_UnitTest.cpp" />
     <ClCompile Include="KPEngine_Test.cpp" />
+    <ClCompile Include="KPVector2_UnitTest.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
