Added print info functions

--- a/MonsterChaseGame/MonsterChaseGame.vcxproj.filters
+++ b/MonsterChaseGame/MonsterChaseGame.vcxproj.filters
@@ -48,6 +48,15 @@
     <ClInclude Include="include\MonsterChaseGame.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="include\Controllers\PlayerController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Controllers\ZombieController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="include\Controllers\SuperZombieController.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Managers\GameManager.cpp">
@@ -66,6 +75,15 @@
       <Filter>Source Files\GameObjects\Classes</Filter>
     </ClCompile>
     <ClCompile Include="src\MonsterChaseGame.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Controllers\PlayerController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Controllers\ZombieController.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Controllers\SuperZombieController.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
