--- a/MonsterChaseGame/MonsterChaseGame.vcxproj
+++ b/MonsterChaseGame/MonsterChaseGame.vcxproj
@@ -189,14 +189,20 @@
     <ClInclude Include="include\GameObjects\GameObjectType.h" />
     <ClInclude Include="include\GameObjects\Classes\Monster.h" />
     <ClInclude Include="include\GameObjects\Classes\Player.h" />
+    <ClInclude Include="include\Controllers\PlayerController.h" />
+    <ClInclude Include="include\Controllers\ZombieController.h" />
+    <ClInclude Include="include\Controllers\SuperZombieController.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="src\Controllers\PlayerController.cpp" />
     <ClCompile Include="src\Managers\GameManager.cpp" />
     <ClCompile Include="src\GameObjects\GameObject.cpp" />
     <ClCompile Include="src\GameObjects\GameObjectType.cpp" />
     <ClCompile Include="src\GameObjects\Classes\Monster.cpp" />
     <ClCompile Include="src\GameObjects\Classes\Player.cpp" />
     <ClCompile Include="src\MonsterChaseGame.cpp" />
+    <ClCompile Include="src\Controllers\ZombieController.cpp" />
+    <ClCompile Include="src\Controllers\SuperZombieController.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
